--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --hot --host 127.0.0.1",
+    "dev": "webpack-dev-server --open --hot --inline",
     "dist": "webpack -p"
   },
   "keywords": [],
@@ -31,7 +31,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
